inclusão do texto no html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <title>Desafio JS</title>
 </head>
 <body>
+    <p id="texto">
+        JavaScript é uma linguagem de programação interpretada.
+        Foi originalmente implementada como parte dos navegadores web 
+        para que scripts pudessem ser executados do lado do cliente e 
+        interagissem com o usuário sem a necessidade deste script passar 
+        pelo servidor, controlando o navegador, realizando comunicação 
+        assíncrona e alterando o conteúdo do documento exibido.
+    </p>
     <script src="scripts.js"></script>
 </body>
 </html>
