criando a descrição no README.md

--- a/index.html
+++ b/index.html
@@ -5,14 +5,9 @@
     <title>Desafio JS</title>
 </head>
 <body>
-    <p id="texto">
-        JavaScript é uma linguagem de programação interpretada.
-        Foi originalmente implementada como parte dos navegadores web 
-        para que scripts pudessem ser executados do lado do cliente e 
-        interagissem com o usuário sem a necessidade deste script passar 
-        pelo servidor, controlando o navegador, realizando comunicação 
-        assíncrona e alterando o conteúdo do documento exibido.
-    </p>
+    <h3>Texto de entrada:</h3>
+    <p id="texto">JavaScript é uma linguagem de programação interpretada. Foi originalmente implementada como parte dos navegadores web para que scripts pudessem ser executados do lado do cliente e interagissem com o usuário sem a necessidade deste script passar pelo servidor, controlando o navegador, realizando comunicação assíncrona e alterando o conteúdo do documento exibido.</p>
+    <br/>
     <script src="scripts.js"></script>
 </body>
 </html>
