--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
 </head>
 <body>
     <h3>Texto de entrada:</h3>
-    <p id="texto">JavaScript é uma linguagem de programação interpretada. Foi originalmente implementada como parte dos navegadores web para que scripts pudessem ser executados do lado do cliente e interagissem com o usuário sem a necessidade deste script passar pelo servidor, controlando o navegador, realizando comunicação assíncrona e alterando o conteúdo do documento exibido.</p>
-    <br/>
+    <p id="texto">JavaScript é uma linguagem de programação interpretada. 
+        Foi originalmente implementada como parte dos navegadores web para 
+        que scripts pudessem ser executados do lado do cliente e 
+        interagissem com o usuário sem a necessidade deste script passar 
+        pelo servidor, controlando o navegador, realizando comunicação 
+        assíncrona e alterando o conteúdo do documento exibido.
+    </p>
+    
     <script src="scripts.js"></script>
 </body>
 </html>
